ajout plupart des machines et reglages des beug